[package]
name = "toki"
version = "0.1.0"
authors = ["Kevin Miller, Jr. <kevinmillerjr@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "toki"
path = "src/main.rs"

[dependencies]
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
dioxus-free-icons = { version = "0.9", features = [
    "font-awesome-brands",
    "lucide",
] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
