[package]
name = "toki"
version = "0.1.0"
edition = "2021"
authors = ["Kevin Miller, Jr. <kevinmillerjr@gmail.com>"]
description = "A Dioxus-based Rust app"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/toki"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "toki"
path = "src/main.rs"

[dependencies]
dioxus = { version = "0.6", features = ["router", "web"] }
dioxus-free-icons = { version = "0.9", features = [
    "font-awesome-brands",
    "lucide",
] }
# Remove dioxus-helmet for now - it's not compatible with 0.6
# dioxus-helmet = "0.2.4"  # Comment this out
web-sys = "0.3.77"

[features]
default = ["web", "server"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
